[gd_scene load_steps=30 format=3 uid="uid://cl1ii3qf1nkw5"]

[ext_resource type="Texture2D" uid="uid://dd1ax72jm8kp1" path="res://Sprites/Prototype/Prototype_Worksheet.png" id="1_gmdau"]
[ext_resource type="Script" path="res://Characters/player_character.gd" id="1_rqwg0"]
[ext_resource type="Texture2D" uid="uid://dixofonps7hgc" path="res://Sprites/Prototype/shitgun.png" id="3_n04yn"]
[ext_resource type="Script" path="res://Characters/gun.gd" id="4_gl17r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oh67i"]
size = Vector2(12, 14)

[sub_resource type="Animation" id="Animation_632ih"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_kp556"]
resource_name = "idle_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="Animation" id="Animation_7mnfy"]
resource_name = "idle_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_e8duu"]
resource_name = "idle_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 6]
}

[sub_resource type="Animation" id="Animation_n0u27"]
resource_name = "idle_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_6vf7b"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_a2say"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_ytwuj"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_880u3"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hkshe"]
_data = {
"RESET": SubResource("Animation_632ih"),
"idle_down": SubResource("Animation_kp556"),
"idle_left": SubResource("Animation_7mnfy"),
"idle_right": SubResource("Animation_e8duu"),
"idle_up": SubResource("Animation_n0u27"),
"walk_down": SubResource("Animation_6vf7b"),
"walk_left": SubResource("Animation_a2say"),
"walk_right": SubResource("Animation_ytwuj"),
"walk_up": SubResource("Animation_880u3")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ne4dx"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qlgkr"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_prx10"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ojlw0"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_bqccy"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ne4dx")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_qlgkr")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_prx10")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_ojlw0")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ad0cj"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sr1ah"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_itxx5"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kqjsa"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_enc1b"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ad0cj")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_sr1ah")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_itxx5")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_kqjsa")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1nn2v"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ihkiq"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8rdep"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_5t4qy"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_bqccy")
states/Idle/position = Vector2(340, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_enc1b")
states/Walk/position = Vector2(487, 100)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_1nn2v"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_ihkiq"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_8rdep")]

[node name="Player Character" type="CharacterBody2D"]
script = ExtResource("1_rqwg0")
dash_speed = 256.0
dash_duration = 0.15

[node name="Character Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_gmdau")
hframes = 4
vframes = 14
frame = 16

[node name="Character Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_oh67i")

[node name="CharacterAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hkshe")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_5t4qy")
anim_player = NodePath("../CharacterAnimationPlayer")
active = true
parameters/Idle/blend_position = Vector2(0, 1.09039)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="gun" type="Sprite2D" parent="."]
position = Vector2(3, 2)
texture = ExtResource("3_n04yn")
centered = false
offset = Vector2(-13, -16)
script = ExtResource("4_gl17r")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCDTimer" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.03

[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
